# -RCP-Experiment-

./: .gitignore  CHANGELOG.md  CITATION.cff  LOCATIONS.md  OSF-PREREGISTRATION.md  PROTOCOL.md  README.md  RH.md  analyze.py  collect.py  config-code.json  config-finance.json  config.json  errors.txt  explorer-v2.html  explorer.html  generate_synthetic.py  getstarted.sh  requirements.txt  run.sh  run_experiment.py  run_stats.sh  run_tests.py  split_multi_code.sh  test_analyze.py  test_collect.py  validate.py
20260321-1-Gemini-Data/: run_metadata.json
20260321-1-Gemini-Moral-Data/: explanations.jsonl  manipulation_check.jsonl
20260321-1-Gemini-Moral-Results/: drift_metrics.json  moral_flattening.json
20260321-1-Gemini-Results/: centroid_baseline.json  tie_density.json
20260321-1-Grok-Data/: explanations.jsonl  manipulation_check.jsonl  run_metadata.json
20260321-1-Grok-Moral-Data/: main_grok.jsonl
20260321-1-Grok-Moral-Results/: drift_metrics.json  tie_density.json
20260321-1-Sonnet-Data/: run_metadata.json
20260321-1-Sonnet-Moral-Data/: explanations.jsonl  manipulation_check.jsonl
20260321-1-Sonnet-Moral-Results/: centroid_baseline.json  tie_density.json
20260321-2-GPT4o-Data/: main_gpt-4o.jsonl  manipulation_check.jsonl  run_metadata.json
20260321-2-GPT4o-Moral-Results/: moral_flattening.json  tie_density.json
20260321-2-GPT4o-Results/: centroid_baseline.json
analysis/: analyze.py  launcher.py  (+7 more)
analysis/cluster-validation/: README.md  cluster_validate.py  config-v2-pool.json  pyproject.toml  requirements.txt  run.sh  test_cluster_validate.py
(+136 files in other folders)
