[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rcp-cluster-validate"
version = "0.1.0"
description = "Embedding-based cluster validation for RCP concept inventories"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]

[project.scripts]
rcp-cluster-validate = "cluster_validate:main"
